--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,13 @@ matplotlib==3.7.1
 multidict==6.0.4
 numpy==1.24.2
 packaging==23.1
+pandas==2.0.0
 Pillow==9.5.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2023.3
 requests==2.28.2
 six==1.16.0
+tzdata==2023.3
 urllib3==1.26.15
 yarl==1.8.2
